[package]
name = "zenoh-nostd-demo-esp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Esp
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.1", features = ["unstable", "esp32s3"] }

esp-alloc = { version = "0.9.0" }
esp-println = { version = "0.16.0", features = ["defmt-espflash", "esp32s3"] }

esp-rtos = { version = "0.1.1", features = ["esp32s3", "esp-radio", "embassy"] }
esp-radio = { version = "0.16.0", features = [
    "defmt",
    "unstable",
    "esp-alloc",
    "esp32s3",
    "wifi",
] }

# Embassy
embassy-executor = "0.9.1"
embassy-net = { version = "0.7.1", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
] }
embassy-time = "0.5.0"

# Zenoh
zenoh-nostd = { git = "ssh://git@github.com/ZettaScaleLabs/zenoh-nostd", branch = "develop"}
zenoh-nostd-embassy = { git = "ssh://git@github.com/ZettaScaleLabs/zenoh-nostd", branch = "develop" }

# Other
static_cell = "2.1.1"
defmt = "1.0.1"
embedded-hal-async = "1.0.0"
libm = { version = "0.2.15", default-features = false }
getrandom = { version = "0.2.16", features = ["custom"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
